--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ androidx-lifecycle = "2.9.4"
 androidx-testExt = "1.3.0"
 composeHotReload = "1.0.0-beta07"
 composeMultiplatform = "1.9.0"
+javaJwt = "4.5.0"
 junit = "4.13.2"
 kotlin = "2.2.20"
 kotlinx-coroutines = "1.10.2"
@@ -31,6 +32,7 @@ okio = "3.16.0"
 
 
 [libraries]
+java-jwt = { module = "com.auth0:java-jwt", version.ref = "javaJwt" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-testJunit = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 junit = { module = "junit:junit", version.ref = "junit" }
